<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/app_name_bold"
        android:gravity="center_vertical"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_alignParentStart="true"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switchForActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="On"
        android:textOff="Off"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>